[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/assets/SingleCell.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/View.gd" type="Script" id=3]
[ext_resource path="res://src/scenes/MainUI.gd" type="Script" id=4]
[ext_resource path="res://src/assets/icons/play_72px.png" type="Texture" id=5]
[ext_resource path="res://src/assets/icons/next_72px.png" type="Texture" id=6]
[ext_resource path="res://src/assets/icons/settings_72px.png" type="Texture" id=7]
[ext_resource path="res://src/assets/fonts/SmallText.tres" type="DynamicFont" id=8]

[sub_resource type="TileSet" id=1]
0/name = "SingleCell.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 1, 1 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 1.5
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_brightness = 3.6
adjustment_contrast = 0.63
adjustment_saturation = 0.01

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="World" type="TileMap" parent="."]
modulate = Color( 1.42353, 0.627451, 0.32549, 1 )
tile_set = SubResource( 1 )
cell_size = Vector2( 1, 1 )
cell_quadrant_size = 1
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
cell_tile_origin = 1
centered_textures = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="View" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.05, 0.05 )
process_mode = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MainUI" type="CanvasLayer" parent="."]

[node name="MainUI" type="MarginContainer" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/MainUI"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/MainUI/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="PanelContainer" parent="MainUI/MainUI/HBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/Header"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 49.0

[node name="LeftEmpty" type="Control" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/Header/HBoxContainer"]
margin_right = 20.0
margin_bottom = 48.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/Header/HBoxContainer"]
margin_left = 24.0
margin_top = 15.0
margin_right = 242.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 8 )
text = "Conway's Game of Life, by LyffLyff"

[node name="RightEmpty" type="Control" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/Header/HBoxContainer"]
margin_left = 246.0
margin_right = 958.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="Settings" type="TextureButton" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/Header/HBoxContainer"]
margin_left = 962.0
margin_top = 6.0
margin_right = 1022.0
margin_bottom = 41.0
rect_min_size = Vector2( 60, 35 )
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Buffer" type="Control" parent="MainUI/MainUI/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 536.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MainUI/MainUI/HBoxContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 59.0
mouse_filter = 0
alignment = 1

[node name="Play" type="TextureButton" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_top = 14.0
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 30 )
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="NextGen" type="TextureButton" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 64.0
margin_top = 14.0
margin_right = 124.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 30 )
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="GensPerSec" type="SpinBox" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 128.0
margin_top = 4.0
margin_right = 248.0
margin_bottom = 54.0
rect_min_size = Vector2( 120, 50 )
size_flags_vertical = 4
min_value = 1.0
max_value = 2000.0
value = 1.0
align = 1
suffix = "Gen/s"

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 1022.0
margin_bottom = 58.0
size_flags_horizontal = 3

[node name="GenText" type="Label" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 50.0
margin_bottom = 37.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 6
text = "Gen: "
align = 2
valign = 1

[node name="GenAmount" type="Label" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_top = 20.0
margin_right = 154.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 6
text = "1"
valign = 1

[node name="Buffer" type="Control" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 608.0
margin_bottom = 58.0
size_flags_horizontal = 3

[node name="CellClr" type="ColorPickerButton" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
margin_left = 612.0
margin_top = 14.0
margin_right = 672.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 30 )
focus_mode = 0
size_flags_vertical = 4
color = Color( 0.427451, 0.427451, 0.427451, 1 )

[node name="CheckButton" type="CheckButton" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
margin_left = 676.0
margin_right = 756.0
margin_bottom = 58.0
rect_min_size = Vector2( 80, 0 )
pressed = true
text = "Grid:"
align = 2

[node name="Buffer2" type="Control" parent="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
margin_left = 760.0
margin_right = 770.0
margin_bottom = 58.0
rect_min_size = Vector2( 10, 0 )

[node name="TopUI" type="CanvasLayer" parent="."]
layer = 2

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="PanelContainer" type="PanelContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[connection signal="pressed" from="MainUI/MainUI/HBoxContainer/VBoxContainer/Header/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/NextGen" to="." method="_on_NextGen_pressed"]
[connection signal="value_changed" from="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/GensPerSec" to="MainUI/MainUI" method="_on_GensPerSec_value_changed"]
[connection signal="color_changed" from="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/CellClr" to="." method="_on_CellClr_color_changed"]
[connection signal="pressed" from="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/CheckButton" to="." method="ToggleGrid"]
[connection signal="pressed" from="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/CheckButton" to="MainUI/MainUI/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/CheckButton" method="release_focus"]
